force-app/main/default/objects/Stage_Mapping__c/Stage_Mapping__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>scaleMatters Stage Mapping</label>
</CustomObject>