force-app/main/default/objects/Stage_Mapping__c/fields/Closed_Lost_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Mapping__c</fullName>
    <label>Closed/Lost Mapping</label>
    <type>TextArea</type>
</CustomField>