force-app/main/default/objects/Stage_Mapping__c/fields/Closed_Won_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Mapping__c</fullName>
    <label>Closed/Won Mapping</label>
    <type>TextArea</type>
</CustomField>