force-app/main/default/objects/Stage_Mapping__c/fields/isCertified_Mapping__c.field-meta.xml
<CustomField>
    <fullName>isCertified_Mapping__c</fullName>
    <label>isCertified Mapping</label>
    <type>TextArea</type>
</CustomField>