force-app/main/default/objects/Stage_Mapping__c/fields/isGhosted_Mapping__c.field-meta.xml
<CustomField>
    <fullName>isGhosted_Mapping__c</fullName>
    <label>isGhosted Mapping</label>
    <type>TextArea</type>
</CustomField>