force-app/main/default/objects/Stage_Mapping__c/fields/LSBL1__c.field-meta.xml
<CustomField>
    <fullName>LSBL1__c</fullName>
    <label>LSBL1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>