force-app/main/default/objects/Stage_Mapping__c/fields/LSBL2__c.field-meta.xml
<CustomField>
    <fullName>LSBL2__c</fullName>
    <label>LSBL2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>