force-app/main/default/objects/Stage_Mapping__c/fields/LSBL3__c.field-meta.xml
<CustomField>
    <fullName>LSBL3__c</fullName>
    <label>LSBL3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>