force-app/main/default/objects/Stage_Mapping__c/fields/LSBLCL__c.field-meta.xml
<CustomField>
    <fullName>LSBLCL__c</fullName>
    <label>LSBLCL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>