force-app/main/default/objects/Stage_Mapping__c/fields/LSBLCW__c.field-meta.xml
<CustomField>
    <fullName>LSBLCW__c</fullName>
    <label>LSBLCW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>