force-app/main/default/objects/Stage_Mapping__c/fields/LSBLIC__c.field-meta.xml
<CustomField>
    <fullName>LSBLIC__c</fullName>
    <label>LSBLIC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>