force-app/main/default/objects/Stage_Mapping__c/fields/LSBLIG__c.field-meta.xml
<CustomField>
    <fullName>LSBLIG__c</fullName>
    <label>LSBLIG</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>