force-app/main/default/objects/Stage_Mapping__c/fields/Stage_1_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Stage_1_Mapping__c</fullName>
    <label>Stage 1 Mapping</label>
    <type>TextArea</type>
</CustomField>