force-app/main/default/objects/Stage_Mapping__c/fields/Stage_3_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Stage_3_Mapping__c</fullName>
    <label>Stage 3 Mapping</label>
    <type>TextArea</type>
</CustomField>